# linkedList

./: CMakeLists.txt
inc/: linkedList.h  main.h
src/: linkedListInit.c  main.c
